// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-ewnqHT cNiVK"
>
  <div
    class="sc-dicizt dBwYyh"
  >
    <span
      class="sc-iVCKna"
    >
      0
    </span>
    <span
      class="sc-gxYJeL iLsYtg"
    >
      42
    </span>
  </div>
  <button
    class="sc-bgqQcB sc-gTRrQi iNdWkZ dTNcEs"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-ewnqHT cNiVK"
>
  <div
    class="sc-fFGjHI gLKYVy"
  >
    🛌🛌
  </div>
  <button
    class="sc-bgqQcB sc-gTRrQi dZFSFW dTNcEs"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-ewnqHT cNiVK"
>
  <div
    class="sc-fFGjHI gLKYVy"
  >
    🍅
  </div>
  <button
    class="sc-bgqQcB sc-gTRrQi dZFSFW dTNcEs"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-ewnqHT cNiVK"
>
  <div
    class="sc-fFGjHI gLKYVy"
  >
    🛌
  </div>
  <button
    class="sc-bgqQcB sc-gTRrQi dZFSFW dTNcEs"
  >
    Start
  </button>
</div>
`;
